# tunnelatlas

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release-agent.yml
agent/: Cargo.toml  config.example.yaml  sing-box.example.json
agent/src/: client.rs  config.rs  identity.rs  lib.rs  links.rs  main.rs  manager.rs  protocol.rs  render.rs  runtime.rs  secrets.rs  service.rs  sing_box.rs
deploy/: install.sh  tunnelatlas.initd  tunnelatlas.service
docs/: architecture.md  deployment.md  development.md  protocol.md  roadmap.md  security.md
docs/adr/: 0001-control-data-plane.md
worker/: .env.example  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.jsonc
worker/migrations/: 0001_initial.sql  0002_tunnel_authentication.sql  0003_merge_sites_and_agents_into_nodes.sql
worker/public/: app.js  index.html  styles.css
worker/src/: auth.ts  crypto.ts  endpoints.ts  http.ts  index.ts  subscription.ts  types.ts  validation.ts
worker/test/: admin-delete.test.ts  admin-nodes.test.ts  crypto.test.ts  endpoints.test.ts  enrollment.test.ts  subscription.test.ts  validation.test.ts
