[package]
name = "tunnelatlasd"
version = "0.0.5"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
hex = "0.4"
nix = { version = "0.30", features = ["signal"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.47", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
url = "2.5"
uuid = { version = "1.18", features = ["v5", "serde"] }

[dev-dependencies]
tempfile = "3.20"
